# target-optiply

./: LICENSE  README.md  meltano.yml  pyproject.toml  requirements.txt
target_optiply/: auth.py  client.py  sinks.py  target.py
